--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -80,7 +80,7 @@
 
     <section>
         <h2>Version de l'Application</h2>
-        <p>{{ version_application }}</p>
+        <p>{{ version }}</p>
     </section>
 
     <section>
