--- a/Serveur/templates/client2.html
+++ b/Serveur/templates/client2.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="table-container">
-            <h1 class="my-4 text-center">Tableau de bord Client 1</h1>
+            <h1 class="my-4 text-center">Tableau de bord Client 2</h1>
             <table class="table table-striped table-bordered table-hover">
                 <thead>
                     <tr>
@@ -67,7 +67,12 @@
     </div>
 
     <script>
-        fetch('/static/172.17.0.3.json')
+        const jsonFileName = '172.17.0.3.json'; // Remplacez par le nom du fichier .json
+
+        // Modifier le titre pour retirer ".json" à la fin de l'adresse IP locale
+        document.querySelector('h1').textContent += ` - Adresse IP Locale : ${jsonFileName.replace('.json', '')}`;
+
+        fetch(`/static/${jsonFileName}`)
             .then(response => response.json())
             .then(data => {
                 const rows = data[Object.keys(data)[1]].trim().split('\r\n');
